--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="container mx-auto ">
-        <h1 id="titulo" class="text-4xl mt-5 text-white font-bold uppercase text-center">Busca el Clima</h1>
+        <h1 id="titulo" class="text-4xl mt-5 text-white font-bold text-center">EZClima</h1>
         <div class="max-w-lg mx-auto ">
 
             <div class="p-6 mt-10">
@@ -36,13 +36,35 @@
                         id="pais"
                     >
                         <option disabled selected value="">-- Seleccione --</option>
-                        <option value="AR">Argentina</option>
-                        <option value="CO">Colombia</option>
-                        <option value="CR">Costa Rica</option>
+                        <option value="AL">Albania</option>
+                        <option value="DE">Alemania</option>
+                        <option value="AT">Austria</option>
+                        <option value="BE">Bélgica</option>
+                        <option value="BG">Bulgaria</option>
+                        <option value="CY">Chipre</option>
+                        <option value="HR">Croacia</option>
+                        <option value="DK">Dinamarca</option>
+                        <option value="SI">Eslovenia</option>
+                        <option value="SK">Eslovaquia</option>
                         <option value="ES">España</option>
-                        <option value="US">Estados Unidos</option>
-                        <option value="MX">México</option>
-                        <option value="PE">Perú</option>
+                        <option value="EE">Estonia</option>
+                        <option value="FI">Finlandia</option>
+                        <option value="FR">Francia</option>
+                        <option value="GR">Grecia</option>
+                        <option value="HU">Hungría</option>
+                        <option value="IE">Irlanda</option>
+                        <option value="IT">Italia</option>
+                        <option value="LV">Letonia</option>
+                        <option value="LT">Lituania</option>
+                        <option value="LU">Luxemburgo</option>
+                        <option value="MT">Malta</option>
+                        <option value="NL">Países Bajos</option>
+                        <option value="PL">Polonia</option>
+                        <option value="PT">Portugal</option>
+                        <option value="GB">Reino Unido</option>
+                        <option value="CZ">República Checa</option>
+                        <option value="RO">Rumanía</option>
+                        <option value="SE">Suecia</option>
                     </select>
                 </div>
 
