--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/tailwind.min.css" rel="stylesheet">
+    <link href="css/mobile.css" rel="stylesheet">
+
 </head>
 <body>
+    <video autoplay loop muted playsinline>
+        <!-- MP4 con HEVC -->
+        <source src="/video01.mp4" type="video/mp4; codecs=hev1">
+      </video>
 
     <div class="container mx-auto ">
         <h1 id="titulo" class="text-4xl mt-5 text-white font-bold text-center">EZClima</h1>
