--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <video autoplay loop muted playsinline>
-        <!-- MP4 con HEVC -->
-        <source src="/video01.mp4" type="video/mp4; codecs=hev1">
+        <source src="/Comp1.mp4" type="video/mp4">
+
       </video>
 
     <div class="container mx-auto ">
