--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <video autoplay loop muted playsinline>
-        <source src="/src/Comp1.mp4" type="video/mp4">
+        <source src="/src/Comp2.mp4" type="video/mp4">
 
       </video>
     <div class="flex items-center min-h-screen">
         <div class="container mx-auto">
-            <img src="/src/logoEZ3.svg" class="scale-50 w-1/4 mx-auto" id="logo">
+            <img src="/src/logoEZ3.svg" class="scale-50 w-1/5 mx-auto" id="logo">
             <div class="max-w-lg mx-auto ">
 
                 <div class="p-6 mt-10">
@@ -42,35 +42,114 @@
                             id="pais"
                         >
                             <option disabled selected value="">-- Seleccione --</option>
+                            <option value="AF">Afganistán</option>
                             <option value="AL">Albania</option>
                             <option value="DE">Alemania</option>
+                            <option value="AO">Angola</option>
+                            <option value="DZ">Argelia</option>
+                            <option value="AR">Argentina</option>
                             <option value="AT">Austria</option>
+                            <option value="AU">Australia</option>
                             <option value="BE">Bélgica</option>
+                            <option value="BO">Bolivia</option>
+                            <option value="BR">Brasil</option>
                             <option value="BG">Bulgaria</option>
+                            <option value="CA">Canadá</option>
+                            <option value="CL">Chile</option>
+                            <option value="CN">China</option>
                             <option value="CY">Chipre</option>
+                            <option value="CO">Colombia</option>
+                            <option value="KR">Corea del Sur</option>
+                            <option value="CR">Costa Rica</option>
                             <option value="HR">Croacia</option>
+                            <option value="CU">Cuba</option>
                             <option value="DK">Dinamarca</option>
+                            <option value="EC">Ecuador</option>
+                            <option value="EG">Egipto</option>
+                            <option value="AE">Emiratos Árabes Unidos</option>
+                            <option value="EE">Estonia</option>
+                            <option value="ET">Etiopía</option>
+                            <option value="SV">El Salvador</option>
                             <option value="SI">Eslovenia</option>
                             <option value="SK">Eslovaquia</option>
                             <option value="ES">España</option>
+                            <option value="US">Estados Unidos</option>
                             <option value="EE">Estonia</option>
+                            <option value="PH">Filipinas</option>
                             <option value="FI">Finlandia</option>
                             <option value="FR">Francia</option>
                             <option value="GR">Grecia</option>
+                            <option value="GH">Ghana</option>
+                            <option value="GT">Guatemala</option>
+                            <option value="HT">Haití</option>
+                            <option value="HN">Honduras</option>
+                            <option value="HK">Hong Kong</option>
                             <option value="HU">Hungría</option>
                             <option value="IE">Irlanda</option>
+                            <option value="IS">Islandia</option>
+                            <option value="IN">India</option>
+                            <option value="ID">Indonesia</option>
+                            <option value="IR">Irán</option>
+                            <option value="IQ">Irak</option>
+                            <option value="IE">Irlanda</option>
+                            <option value="IL">Israel</option>
                             <option value="IT">Italia</option>
+                            <option value="JM">Jamaica</option>
+                            <option value="JP">Japón</option>
+                            <option value="JO">Jordania</option>
+                            <option value="KZ">Kazajistán</option>
+                            <option value="KE">Kenia</option>
+                            <option value="KW">Kuwait</option>
                             <option value="LV">Letonia</option>
+                            <option value="LB">Líbano</option>
                             <option value="LT">Lituania</option>
                             <option value="LU">Luxemburgo</option>
+                            <option value="MY">Malasia</option>
                             <option value="MT">Malta</option>
+                            <option value="MA">Marruecos</option>
+                            <option value="NI">Nicaragua</option>
+                            <option value="NG">Nigeria</option>
+                            <option value="NO">Noruega</option>
+                            <option value="NZ">Nueva Zelanda</option>
+                            <option value="MX">México</option>
+                            <option value="OM">Omán</option>
                             <option value="NL">Países Bajos</option>
+                            <option value="PK">Pakistán</option>
+                            <option value="PA">Panamá</option>
+                            <option value="PY">Paraguay</option>
+                            <option value="PE">Perú</option>
                             <option value="PL">Polonia</option>
                             <option value="PT">Portugal</option>
+                            <option value="QA">Qatar</option>
                             <option value="GB">Reino Unido</option>
                             <option value="CZ">República Checa</option>
+                            <option value="DO">República Dominicana</option>
                             <option value="RO">Rumanía</option>
+                            <option value="RU">Rusia</option>
+                            <option value="SN">Senegal</option>
+                            <option value="RS">Serbia</option>
+                            <option value="SG">Singapur</option>
+                            <option value="SY">Siria</option>
                             <option value="SE">Suecia</option>
+                            <option value="CH">Suiza</option>
+                            <option value="LK">Sri Lanka</option>
+                            <option value="SE">Suecia</option>
+                            <option value="ZA">Sudáfrica</option>
+                            <option value="TW">Taiwán</option>
+                            <option value="TZ">Tanzania</option>
+                            <option value="TH">Tailandia</option>
+                            <option value="TT">Trinidad y Tobago</option>
+                            <option value="TN">Túnez</option>
+                            <option value="TR">Turquía</option>
+                            <option value="UG">Uganda</option>
+                            <option value="UA">Ucrania</option>
+                            <option value="UY">Uruguay</option>
+                            <option value="UZ">Uzbekistán</option>
+                            <option value="VE">Venezuela</option>
+                            <option value="VN">Vietnam</option>
+                            <option value="YE">Yemen</option>
+                            <option value="ZM">Zambia</option>
+                            <option value="ZW">Zimbabue</option>
                         </select>
                     </div>
 
