--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" 
                             id="pais"
                         >
-                            <option disabled selected value="">-- Seleccione --</option>
+                            <option disabled selected value="">-- País --</option>
                             <option value="AF">Afganistán</option>
                             <option value="AL">Albania</option>
                             <option value="DE">Alemania</option>
